<resources>

    <string name="app_name">SeattleSensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SeattleSensors</string>
    <string name="enable_sensors">Enable</string>
    <string name="disable_sensors">Disable</string>
    <string name="sensoroutput">Sensor output TextView</string>
    <string name="seattle_donate_thanks">Thank you for donating to Seattle</string>
    <string name="sensors">Sensors</string>
    <string name="sensor_config">Sensor Configuration</string>
    <string name="service_autostart">Enable at startup</string>
    <string name="autostart_button">AutostartButton</string>
    <string name="debug_out_button">Debug Output</string>
    <string name="sensor_view_button">Sensor Views</string>
    <string name="title_activity_sensor_config">SensorConfigActivity</string>
    <string name="sensor_config_string">Enable/Disable Sensors</string>
    <string name="title_activity_sensor_debug">SensorDebugActivity</string>
    <string name="debug_out">Sensors Debug Output</string>
    <string name="title_activity_sensors_view">SensorsViewActivity</string>
    <string name="current_values">Current sensor values:</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="menu_debug">Debug</string>

</resources>