<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_sensors" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/disable_sensors" />
    </LinearLayout>

    <EditText
        android:id="@+id/sensoroutput"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:gravity="top"
        android:maxLines = "1000"
		android:scrollbars = "vertical"
        android:hint="@string/sensoroutput" />

</LinearLayout>